[gd_scene load_steps=8 format=3 uid="uid://cu7vq6naajjrq"]

[ext_resource type="PackedScene" uid="uid://duap3slnvvl57" path="res://scenes/block.tscn" id="1_kmkf2"]
[ext_resource type="Script" path="res://scenes/level_saving.gd" id="1_mv8ut"]
[ext_resource type="AudioStream" uid="uid://c0blqklgt8e1p" path="res://addons/kenney_interface_sounds/confirmation_001.wav" id="2_4jdwb"]
[ext_resource type="Texture2D" uid="uid://bhv3pjwr43t0m" path="res://assets/arrmor.png" id="2_b5suk"]
[ext_resource type="Script" path="res://scenes/Block-Icon.gd" id="3_afwe6"]
[ext_resource type="AudioStream" uid="uid://chxvtnfnp6a25" path="res://addons/kenney_interface_sounds/drop_001.wav" id="4_g6eh3"]
[ext_resource type="Script" path="res://scenes/Saving.gd" id="5_vt2q3"]

[node name="Level" type="Node2D"]
script = ExtResource("1_mv8ut")

[node name="Sounds" type="Node2D" parent="."]

[node name="dropsound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("4_g6eh3")
volume_db = 1.0

[node name="Ui_confirmation_sound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("2_4jdwb")

[node name="Build_Cam" type="Camera2D" parent="."]
zoom = Vector2(5, 5)

[node name="Block-Icon" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-108, -58)
texture = ExtResource("2_b5suk")
script = ExtResource("3_afwe6")

[node name="Button" type="Button" parent="Block-Icon"]
self_modulate = Color(1, 1, 1, 0)
offset_left = -6.0
offset_top = -6.0
offset_right = 2.0
offset_bottom = 2.0
scale = Vector2(1.43998, 1.43998)

[node name="Label" type="Label" parent="Block-Icon"]
texture_filter = 1
offset_left = -7.0
offset_top = 4.0
offset_right = 35.0
offset_bottom = 27.0
scale = Vector2(0.40001, 0.40001)
text = "HULL"

[node name="Saving" type="Node2D" parent="."]
script = ExtResource("5_vt2q3")

[node name="Save_Button" type="Button" parent="Saving"]
offset_left = 94.0
offset_top = -65.0
offset_right = 138.0
offset_bottom = -34.0
scale = Vector2(0.479998, 0.479998)
text = "Save"

[node name="Load_Button" type="Button" parent="Saving"]
offset_left = 72.0
offset_top = -65.0
offset_right = 118.0
offset_bottom = -34.0
scale = Vector2(0.470537, 0.470537)
text = "Load"

[node name="LineEdit" type="LineEdit" parent="Saving"]
offset_left = 59.0
offset_top = -50.0
offset_right = 159.0
offset_bottom = -19.0
scale = Vector2(0.559999, 0.559999)
placeholder_text = "Untitled"

[node name="Ship" type="Node2D" parent="."]

[node name="Block" parent="Ship" instance=ExtResource("1_kmkf2")]

[connection signal="button_down" from="Block-Icon/Button" to="Block-Icon" method="_on_button_button_down"]
[connection signal="button_down" from="Saving/Save_Button" to="Saving" method="_on_save_button_button_down"]
[connection signal="button_down" from="Saving/Load_Button" to="Saving" method="_on_load_button_button_down"]
[connection signal="text_changed" from="Saving/LineEdit" to="Saving" method="_on_line_edit_text_changed"]
